--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -11,6 +11,8 @@ import Git from "@/icons/git.astro"
 import GitHub from "@/icons/GitHub.astro"
 import Tailwind from "@/icons/tailwind.astro"
 import Next from "@/icons/next.astro"
+import Java from "@/icons/java.astro"
+
 import { skills } from "@cv"
 import Swift from "@/icons/swift.astro"
 import SwiftUI from "@/icons/swiftui.astro"
@@ -29,6 +31,8 @@ const SKILLS_ICONS: Record<string, any> = {
   GitHub,
   Next,
   Tailwind,
+  Java,
+
   Swift,
   SwiftUI,
   Kotlin,
